<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleDay">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RelativeLayout
                android:id="@+id/eventDraw"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignTop="@id/gridLines"-->
<!--                    android:layout_toEndOf="@id/timeline"-->
<!--                    android:elevation="0dp"-->
<!--                    android:layout_marginStart="5dp"-->
<!--                    android:background="@color/colorPrimaryDark"-->
<!--                    android:height="30dp"-->
<!--                    android:layout_marginTop="0dp"/>-->

                <LinearLayout
                    android:id="@+id/gridLines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/timeline"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:id="@+id/timeline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time3"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time4"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time5"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time6"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time7"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time8"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time9"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time10"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time11"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time12"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time13"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time14"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time15"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time16"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time17"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time18"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time19"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time20"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time21"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time22"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time23"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/time24"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>